# CatalystAD

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: pch.h
src/core/: logging.h  testing.cpp  testing.h
